2003-12-22 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c (genPlus): added special handling for 256 byte 
	aligned xdata arrays. Erik helped me with the if clause.

2003-12-20 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* device/lib/ds390/tinibios.c (CpuSpeed): suppress unreachable code
	warning

2003-12-20 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCast.h,
	* src/SDCCast.c (newAst_),
	* src/SDCCicode.h,
	* src/SDCCicode.c (ast2iCode, newiCode),
	* src/SDCCglobl.h,
	* src/SDCC.y (logical_and_expr, logical_or_expr, conditional_expr,
	expr, statement, expression_statement, selection_statement,
	iteration_statement, expr_opt, jump_statement): foundation for tracking
	sequence points
	* src/SDCCopt.c (killDeadCode): fixed bug #861580 (needs the sequence
	point code too)

2003-12-19 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* support/Util/SDCCerr.c,
	* src/SDCCast.h,
	* src/SDCCast.c (createCase, createDefault, decorateType),
	* src/SDCClabel.c (labelUnreach),
	* src/SDCC.y (labeled_statement, jump_statement): More improvements
	to error messages.
	* support/Util/SDCCerr.c (werrorfl): fixed a non-standard declaration
	(with thanks to Stas Sergeev)
	* device/include/time.h,
	* device/lib/time.c (CheckTime): suppress unreachable code warning

2003-12-18 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCast.c (createIvalCharPtr),
	* src/SDCCglue.c (printChar): fixed bug #862241 (an error in my fix for
	bug #753752)
	* support/regression/tests/nullstring.c: tests for these two bugs

2003-12-18 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* support/Util/SDCCerr.h,
	* support/Util/SDCCerr.c (E_NOT_ALLOWED),
	* src/SDCC.y (struct_declaration, struct_or_union_specifier): complain
	about storage class and 'at' used inside struct or union
	* src/SDCCBBlock.c (iCodeFromeBBlock),
	* src/SDCCcse.c (ifxOptimize),
	* src/SDCCglue.c (emitRegularMap, initPointer, printIvalStruct,